--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-bootstrap": "^2.10.7",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
