--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.1.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.3",
